# dictionary-and-metadata-service

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md  alembic.ini  ingestion_test.py  pyproject.toml
docs/: 00_overview.md  01_clarifications.md  02_data_model_postgres.md  03_data_model_mongo.md  04_data_model_graph.md  09_ingestion_nikkyjain.md  13_admin_ui.md  14_public_ui.md  15_deployment.md  16_testing_and_fixtures.md  README.md
docs/design/: 00_overview.md  02_data_model_postgres.md  03_data_model_mongo.md  04_data_model_graph.md  05_api_metadata_service.md  06_api_dictionary_service.md  07_api_query_service.md  08_ingestion_jainkosh.md  09_ingestion_nikkyjain.md  10_ingestion_vyakaran_ocr.md  11_chat_enrichment_loop.md  12_query_engine.md  13_admin_ui.md  14_public_ui.md  15_deployment.md  16_testing_and_fixtures.md  README.md
docs/jainkosh/: structure.md
docs/manual_testing/: jainkosh_ingestion.md  jainkosh_parser.md  nj_parser_batch.md
docs/query_engine/: 01_keyword_resolve_api.md  03_metadata_fuzzy_match.md  04_subworkflow_endpoints.md  05_definitions_and_extracts_hydration.md
docs/scope/: 00_overview.md  01_pages_and_features.md  02_foundation_status.md  03_shastra_reader.md  04_translation_enrichment_pipeline.md  (+7 more)
migrations/: env.py
parser_configs/: jainkosh.yaml
scripts/: clear_dbs.py  generate_jainkosh_goldens.py  golden_stats.py  ingest_goldens_apply.py  ingest_nj_apply.py  match_extracts.py  teeka_extraction.py
tests/: conftest.py
ui/: README.md  next.config.ts  package.json  pnpm-lock.yaml
(+807 files in other folders)
